change link target to self

--- a/templates/partials/_call.html
+++ b/templates/partials/_call.html
@@ -12,6 +12,6 @@
     <div class='content'>
       <h2>{{ call.title }}</h2>
       <p>{{ call.content | raw }}</p>
-      <a class='button' href='{{ callforspeakers }}' target='_blank'>{{call.button}}</a>
+      <a class='button' href='{{ callforspeakers }}' target='_self'>{{call.button}}</a>
     </div>
   </div>
